Migrate from GCM to FCM
Use Firebase Messaging for push notifications instead of the deprecated GCM.

MAILAND-968

#comment Affected: Push notifications

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ app/schemas/
 privateConfig/
 sentry.properties
 
+# Google services .json files
+app/google-services.json
+app/src/beta/google-services.json
 
 
 # # # # # # # # #
