Make the detekt analysis job not mandatory for tags

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,12 +43,14 @@ detekt analysis release:
   only:
     - release
     - prerelease
+    - tags
 
 detekt analysis:
   extends: .detekt-analysis-common
   except:
     - release
     - prerelease
+    - tags
 
 build debug:
   stage: build
