Added queries to aid package visibility handling
MAILAND-1047,
MAILAND-1050

#comment With API level 30 there are changes with package visibility with required adding queries in Manifest in order the app to handle them correctly. Affected: Opening external apps from inside the app, like ex. uploading image, clicking on telephone number to open dialer, opening links etc..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,26 @@
     <uses-feature android:name="android.hardware.telephony"
         android:required="false" />
 
+
+    <queries>
+        <!-- WebView -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="http" />
+        </intent>
+
+        <!-- Camera -->
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
+
+        <!-- Telephony -->
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+        </intent>
+    </queries>
+
     <application
         android:name=".core.ProtonMailApplication"
         android:allowBackup="false"
