Include all the modules in caches on CI
MAILAND-1218

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,9 @@ before_script:
 cache:
   paths:
     - .gradle/caches
-    - app/build/
+    - '**/build'
+    - '**/**/build'
+    - '**/**/**/build'
 
 stages:
   - manual-release
