--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-  image: gitlab.protontech.ch:4567/protonvpn/android/android-app-new:latest
+  image: $CI_REGISTRY/protonvpn/android/android-app-new:latest
 
 before_script:
   - export JAVA_TOOL_OPTIONS="-Dhttp.proxyHost=$( echo ${http_proxy##http://} | cut -d':' -f1 ) -Dhttp.proxyPort=$( echo ${http_proxy##http://} | cut -d':' -f2 ) -Dhttps.proxyHost=$( echo ${https_proxy##http://} | cut -d':' -f1 ) -Dhttps.proxyPort=$( echo ${https_proxy##http://} | cut -d':' -f2 ) -Dhttp.nonProxyHosts=\"$( echo $no_proxy | tr ',' '|' )\""
@@ -10,8 +10,9 @@ before_script:
   - echo "App version name ${VERSION_NAME}"
   - echo "App version name ${VERSION_CODE}"
 cache:
+  key: ${CI_COMMIT_REF_SLUG}
   paths:
-    - .gradle/caches
+    - .gradle
     - '**/build'
     - '**/**/build'
     - '**/**/**/build'
@@ -63,7 +64,6 @@ detekt analysis:
     - merge_requests
     - branches
   tags:
-    - android
     - large
   script:
     - ./gradlew assembleBetaDebug
@@ -98,7 +98,6 @@ build prerelease:
     - prerelease
     - tags
   tags:
-    - android
     - large
   script:
     - ./gradlew assemblePlaystoreReleasePlayStore
@@ -114,7 +113,6 @@ build release:
   only:
     - releases
   tags:
-    - android
     - large
   script:
     - ./gradlew assemblePlaystoreReleasePlayStore
@@ -132,7 +130,6 @@ build release:
   except:
     - schedules
   tags:
-    - android
     - large
   script:
     - ./gradlew -Pci --console=plain allTest
@@ -162,7 +159,6 @@ unit tests release:
   except:
     - schedules
   tags:
-    - android
     - large
   script:
     - wget --quiet --output-document=/tmp/google-cloud-sdk.tar.gz https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz
@@ -205,7 +201,6 @@ firebase regression tests:
   rules:
     - if: '$TEST_TYPE == "regression"'
   tags:
-    - android
     - large
   script:
     - wget --quiet --output-document=/tmp/google-cloud-sdk.tar.gz https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz
@@ -233,7 +228,6 @@ firebase feature tests:
   rules:
     - if: '$TEST_TYPE == "feature"'
   tags:
-    - android
     - large
   script:
     - wget --quiet --output-document=/tmp/google-cloud-sdk.tar.gz https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz
@@ -296,7 +290,7 @@ release-publish-github:
     RELEASE_SYNC_FROM_BRANCH: 'release'
   extends: .release-sync-commit-shared
   tags:
-    - medium
+    - small
 
 release-publish-github-tags:
   needs:
@@ -309,7 +303,7 @@ release-publish-github-tags:
     RELEASE_SYNC_FROM_BRANCH: 'release'
   extends: .release-sync-tags-shared
   tags:
-    - medium
+    - small
   
 publish-github:
   stage: bot-release
@@ -322,7 +316,7 @@ publish-github:
       RELEASE_GITHUB_BRANCH: 'release'
   extends: .release-make-release
   tags:
-    - medium
+    - small
 
 check for fixups:
   stage: analyze
