Adds labels and folders ui tests.
Affected: UI tests

MAILAND-1057

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ build debug develop:
     - job: detekt analysis
   only:
     - develop
+    - schedules
   script:
     - ./gradlew clean
     - ./gradlew assembleBetaDebug
