Added QUERY_ALL_PACKAGES permission to allow querying all packages.
#comment There were changes related to package visibility in API30 which we now target described in this article https://developer.android.com/training/basics/intents/package-visibility. It affects the ability of the apps of opening various links. E.g. when we would like amazon app links to be opened we should define it explicitly in AndroidManifest queries section. However,as our application can receive any type of links we are adding new permission QUERY_ALL_PACKAGES.

MAILAND-1296

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
 
     <uses-feature
         android:name="android.hardware.camera"
