--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,10 @@ build debug uitests:
   extends: .build-debug-common
   only:
     - schedules
+  script:
+    - ./gradlew clean
+    - ./gradlew assembleBetaDebug
+    - ./gradlew assembleBetaDebugAndroidTest
 
 build debug release:
   extends: .build-debug-common
