--- a/config/detekt/config.yml
+++ b/config/detekt/config.yml
@@ -2,7 +2,7 @@
 
 # Default excluded files are `` ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**'] ``
 build:
-  maxIssues: 12480
+  maxIssues: 6412
   excludeCorrectable: false
   weights:
   # complexity: 2
@@ -109,9 +109,11 @@ complexity:
     ignoredLabels: []
   LargeClass:
     active: true
+    excludes: ['**/test/**', '**/**Test/**']
     threshold: 500
   LongMethod:
     active: true
+    excludes: ['**/test/**', '**/**Test/**']
     threshold: 60
   LongParameterList:
     active: true
