--- a/app/src/main/res/raw/edit_settings_structure.json
+++ b/app/src/main/res/raw/edit_settings_structure.json
@@ -96,6 +96,13 @@
       "setting_value": "",
       "setting_hasValue": true,
       "setting_type": "drill"
+    },
+    {
+      "setting_id": "block_swiping_gestures",
+      "is_section": false,
+      "setting_value": "",
+      "setting_hasValue": true,
+      "setting_type": "toggle"
     }
   ],
   [
