Add basic UI test suite for single View

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,8 @@
         </receiver>
 
 
+        <activity android:name=".ViewTestActivity"/>
+
         <activity
             android:name=".activities.SplashActivity"
             android:clearTaskOnLaunch="true"
