--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,7 +119,7 @@ build alpha:
     - large
   script:
     - ./gradlew clean
-    - ./gradlew assembleProductionRelease
+    - ./gradlew assembleAlphaRelease
   artifacts:
     expire_in: 3 week
     paths:
